<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main_act.MainActivity"
        android:background="@color/gray4_trans_50">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="12dp"
            app:cardCornerRadius="10dp"
            android:elevation="32dp">




            <LinearLayout
                android:id="@+id/lnl_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_date"
                android:layout_margin="12dp"
                android:background="#E3F2FD"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/schedule_for"
                    android:textSize="24sp" />


                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_below="@id/tv_one"
                    android:layout_marginTop="18dp"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_departure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/gray4_trans_50"
                    android:padding="10dp"
                    android:text="@string/str_departure"
                    android:textColor="@color/blue_light"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_arrival"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/gray4_trans_50"
                    android:padding="10dp"
                    android:text="@string/str_arrival"
                    android:textColor="@color/blue_light"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/str_transport"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_transport"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/gray4_trans_50"
                        android:text="Вид транспорта"
                        android:textAlignment="center"
                        android:textColor="@color/blue_light"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:text="@string/str_search" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>